@@ -11,7 +11,6 @@ Makefile
 src/config.h
 src/libuca.so*
 tags
-test/
 tools/benchmark
 tools/gen-doc
 tools/grab
